WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144821
Invalidate the FontCache on WebProcess suspension / critical memory pressure
https://bugs.webkit.org/show_bug.cgi?id=144821
Summary
Invalidate the FontCache on WebProcess suspension / critical memory pressure
Chris Dumez
Reported
2015-05-08 17:28:17 PDT
Invalidate the FontCache on WebProcess suspension / critical memory pressure to free a bit more memory (an extra 4-16Kb on the pages I tested). We already purge inactive font data on non-critical memory warning but invalidating the whole FontCache takes care of clearing the FontCascade cache and the fontPlatformData cache as well.
Attachments
Patch
(1.81 KB, patch)
2015-05-08 17:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-05-08 17:30:48 PDT
Created
attachment 252757
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-09 10:38:41 PDT
Comment on
attachment 252757
[details]
Patch Clearing flags on attachment: 252757 Committed
r184041
: <
http://trac.webkit.org/changeset/184041
>
WebKit Commit Bot
Comment 3
2015-05-09 10:38:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug