Invalidate the FontCache on WebProcess suspension / critical memory pressure https://bugs.webkit.org/show_bug.cgi?id=144821

Reviewed by Antti Koivisto.

Invalidate the FontCache on WebProcess suspension / critical memory
pressure to free a bit more memory (an extra 4-16Kb per WebProcess on
the pages I tested). We already purge inactive font data on
non-critical memory warning but invalidating the whole FontCache takes
care of clearing the FontCascade cache and the fontPlatformData cache
as well.

* platform/MemoryPressureHandler.cpp:
(WebCore::MemoryPressureHandler::releaseCriticalMemory):


Canonical link: https://commits.webkit.org/162864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184041 268f45cc-cd09-0410-ab3c-d52691b4dbfc